Thorn and Petal Bar Edit 2 with white lettering

--- a/ThornandPetalBar.html
+++ b/ThornandPetalBar.html
@@ -1,11 +1,14 @@
 <DOCTYPE! html>
 <html>
-<head><link rel="stylesheet" href="unit4style.css" />
+<head>
+	<link rel="stylesheet" href="unit4style.css" />
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
-<Title>Thorn and Petal Bar</title></head>
+<Title>Thorn and Petal Bar</title>
+</head>
 
 <body>
 <h1>Thorn and Petal</h1>
 <p>Pairing Food & Fantasy From Around the Globe</p>
+<p id"one">Welcome to a world of indulgence.</p>
 </body>
 </html>
