Unit 4 Thorn and Petal Restaurant FInal Draft

--- a/ThornandPetal.html
+++ b/ThornandPetal.html
@@ -8,12 +8,7 @@
 
 <body>
 <h1>Thorn and Petal</h1>
-
-	<p>A Gastronomic Exploration<br>of Global Food and<br>Fantasy.<br>Welcome to a world of<br>indulgence.<br>
-
- 	<div class="footer">
-    <p>255 Baymore Avenue  Atlanta, Georgia 30032  Phone 770.555.2424<br><a href="mailto:someone@thornandpetal.com">reservations@thornandpetal.com</a>.</p>
-    </div>
-
+<p id="one" >Pairing Food & Fantasy From Around the Globe</p>
+<p id="two" >Welcome to a world of indulgence.</p>
 </body>
 </html>
