--- a/ThornandPetalBar.html
+++ b/ThornandPetalBar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="unit4style.css" />
+	<link rel="stylesheet" href="thornandpetal.css" />
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
 <Title>Thorn and Petal Restaurant</title>
 </head>
