--- a/Unit8Project/project8.html
+++ b/Unit8Project/project8.html
@@ -36,11 +36,11 @@
 		<p>In terms of color, font and image scheme, after reviewing the responsive web development online, I think it is the best idea to keep the font family and color scheme the same on both the desktop and mobile sites. This will help encourage a sense of continuity in users, instead of confusion. I did consider making the backgroud dark and the font light, but the current colors are clean making page elements easier to identify. The images and videos will be limited to particular pages, such as the "Filmography", "Photography" and "Painting" page sections. Although it took time for the images on Thomas Duval's site to load, and I will contain links on all pages to the social networking sites, including the artist's complete, external portfolio, I think it is crucial to have some of the best photographs, trailers and paintings directly on this site in order to help give users a quick taste of who the artist is and to inspire further interest. This content will stack in square form, one element below another, equally spaced to give a sense of balance and flow. A finger would be used to scroll up and down the page (though there would be no official navigation bar to save screen space). Pinching would be another gesture used to zoom in on specific photographs and page elements.</p>
 
 		
-		<img src="Unit8Project/mobilehomepage.jpg" alt="Homepage Image" height="306" width="408" rotate="right-180%" <title>Mobile Design Homepage Mockup</title>
+		<img src="mobilehomepage.jpg" alt="Homepage Image" height="306" width="408" rotate="right-180%" <title>Mobile Design Homepage Mockup</title>
 		<br>
-		<img src="Unit8Project/expandednavhomepage.jpg" alt="Expanded Homepage Image" height="500" width="250" <title>Expanded Navigation Mobile Homepage Mockup</title>
+		<img src="expandednavhomepage.jpg" alt="Expanded Homepage Image" height="500" width="250" <title>Expanded Navigation Mobile Homepage Mockup</title>
 		<br>
-		<img src="Unit8Project/filmographycompworks.jpg" alt="Filmography: Completed Works" height="450" width="300" <title>Filmography: Completed Works Mobile Page Mockup</title>
+		<img src="filmographycompworks.jpg" alt="Filmography: Completed Works" height="450" width="300" <title>Filmography: Completed Works Mobile Page Mockup</title>
 		
 
 </body>
