--- a/Unit9ProjectB/mobileindex.html
+++ b/Unit9ProjectB/mobileindex.html
@@ -22,7 +22,7 @@
 
 
         <aside>
-	      <img id="HeroImage" src="DSC_0653_3.jpg">
+	      <img id="HeroImage" src="DSC_0653_3.jpg" alt="Stevie in Chiffon Wrap Showcasing Jewelry" title="Stevie in Chiffon Wrap Showingcasing Jewelry">
         </aside>
 	 
 	  <div id="container">
